syntax = "proto3";

package argus.ecs.v1;

option go_package = "github.com/argus-labs/cardinal/net/proto/gen/go/ecs/v1";

service Game {
  rpc StartGameLoop(MsgStartGameLoop) returns (MsgStartGameLoopResponse);
  rpc SendEnergy(MsgSendEnergy) returns (MsgSendEnergyResponse);
}

message MsgStartGameLoop {
}

message MsgStartGameLoopResponse {
  string game_id = 1;
}

message MsgSendEnergy {
  string from = 1;
  string to = 2;
  uint64 amount = 3;
}

message MsgSendEnergyResponse {}
